High Contrast Inverse: scale trough fix
- make the trough more visible for HCI

https://bugzilla.gnome.org/show_bug.cgi?id=763805

--- a/gtk/theme/HighContrast/gtk-contained-inverse.css
+++ b/gtk/theme/HighContrast/gtk-contained-inverse.css
@@ -2293,7 +2293,7 @@ treeview.view radio:selected:disabled {
 scale trough, scale fill {
   border: 2px solid gray;
   border-radius: 4px;
-  background-color: gray;
+  background-color: #1a1a1a;
   box-shadow: none; }
   scale trough:disabled, scale fill:disabled {
     border-color: #494949;
